cmake_minimum_required(VERSION 2.8)
project(cpp_primer_plus_examples)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(chapter-2)
add_subdirectory(chapter-3)
add_subdirectory(chapter-4)
add_subdirectory(chapter-5)
add_subdirectory(chapter-6)
add_subdirectory(chapter-7)
add_subdirectory(chapter-8)
add_subdirectory(chapter-9)
add_subdirectory(chapter-10)
add_subdirectory(chapter-11)
add_subdirectory(chapter-12)
add_subdirectory(chapter-13)
add_subdirectory(chapter-14)
add_subdirectory(chapter-15)
add_subdirectory(chapter-16)
add_subdirectory(chapter-17)
add_subdirectory(chapter-18)

